<resources>
    <string name="app_name">Aquaqu</string>
    <string name="action_settings">Settings</string>

    <string name="aqu_weather">날씨</string>
    <string name="aqu_temp">기온</string>
    <string name="aqu_wind">바람</string>
    <string name="aqu_sea">조위</string>
    <string name="aqu_water">수온</string>
    <string name="aqu_height">파고</string>

    <string name="aqu_news">뉴스</string>
    <string name="aqu_important">주의사항</string>
    <string name="aqu_travel">관광정보</string>

    <string name="close_app">뒤로 버튼을 한 번 더 누르면 앱이 종료됩니다.</string>

    <string name="zero">이호 해수욕장</string>
    <string name="one">삼양 해수욕장</string>
    <string name="two">함덕 해수욕장</string>
    <string name="three">김녕 해수욕장</string>
    <string name="four">신양 해수욕장</string>
    <string name="five">표천 해수욕장</string>
    <string name="six">중문 해수욕장</string>
    <string name="seven">화순 해수욕장</string>
    <string name="eight">금릉 해수욕장</string>
    <string name="nine">협제 해수욕장</string>
    <string name="ten">곽지 해수욕장</string>

</resources>
